changs the title

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Invoice</title>
+    <title>Edit Invoice - Invoice Generator</title>
     <link rel="stylesheet" href="/css/edit.css">
 </head>
 <body>
