--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,3 +1,5 @@
+<title>Invoice Details - Invoice Generator</title>
+
 <link rel="stylesheet" href="/css/view.css">
 
 <div class="invoice-container">
