--- a/views/invoices.ejs
+++ b/views/invoices.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invoices</title>
+    <title>Invoice List - Invoice Generator</title>
     <link rel="stylesheet" href="/css/invoices.css">
 </head>
 <body>
